cabal-version       : 3.0

name                : valor
version             : 0.1.0.0
build-type          : Simple

category            : Validation
synopsis            : Simple, general and structured validation library.
description         : Please see the README.

homepage            : https://github.com/mastarija/valor#readme
bug-reports         : https://github.com/mastarija/valor/issues

author              : Luka Hadžiegrić
maintainer          : luka@mastarija.com

license             : MIT
license-file        : LICENSE
copyright           : Copyright (C) Luka Hadžiegrić 2020

extra-source-files  : README.md

source-repository head
  type              : git
  location          : https://github.com/mastarija/valor

common core
  ghc-options       : -Wall
  build-depends     : base
                    , transformers
  default-language  : Haskell2010

library
  import            : core
  hs-source-dirs    : lib
  exposed-modules   : Data.Valor

test-suite test
  import            : core
  type              : exitcode-stdio-1.0
  main-is           : Spec.hs
  ghc-options       : -threaded -rtsopts -with-rtsopts=-N
  other-modules     : Data.ValorSpec
  build-depends     : text
                    , hspec
                    , valor
  hs-source-dirs    : tst
  build-tool-depends: hspec-discover:hspec-discover
